// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App has a valid snapshot 1`] = `
<div
  className="page"
>
  <div
    className="interactions"
  >
    <button
      onClick={[Function]}
      type="button"
    >
      More
    </button>
    <form
      className="search"
      onSubmit={[Function]}
    >
      <input
        onChange={[Function]}
        type="text"
        value="Redux"
      />
      <button
        type="submit"
      >
        Search
      </button>
    </form>
  </div>
  <div
    className="content"
  >
    <div
      className="table"
    />
  </div>
</div>
`;

exports[`Search has a valid snapshot 1`] = `
<form
  className="search"
>
  <input
    type="text"
  />
  <button
    type="submit"
  >
    Search
  </button>
</form>
`;
